--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,3 +25,44 @@ body {
   height: 100vh;
   padding: 0 15px;
 }
+
+.container {
+  margin: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+p {
+  margin: 5px 0;
+  font-size: 25px;
+  font-weight: 700;
+  color: whitesmoke;
+}
+
+button {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 28px;
+  color: brown;
+  font-weight: bolder;
+  background-color: transparent;
+  border: 2px solid brown;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+  background-color: brown;
+  color: whitesmoke;
+  transform: scale(1.1);
+  border: 2px solid #fff;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
